@@ -15,6 +15,8 @@ Features added
 Bugs fixed
 ----------
 
+* Error messages from XSLT did not reach ``XSLT.error_log``
+
 * Factories objectify.Element() and objectify.DataElement() were missing
   ``attrib`` and ``nsmap`` keyword arguments
 
